@@ -198,6 +198,14 @@ func (o *Operator) getMonitoringFilebeatConfig(output interface{}) (map[string]i
 						},
 					},
 				},
+				{
+					"add_fields": map[string]interface{}{
+						"target": "event",
+						"fields": map[string]interface{}{
+							"dataset": "elastic.agent",
+						},
+					},
+				},
 			},
 		},
 	}
@@ -221,6 +229,14 @@ func (o *Operator) getMonitoringFilebeatConfig(output interface{}) (map[string]i
 								"type":      "logs",
 								"name":      fmt.Sprintf("elastic.agent.%s", name),
 								"namespace": "default",
+							},
+						},
+					},
+					{
+						"add_fields": map[string]interface{}{
+							"target": "event",
+							"fields": map[string]interface{}{
+								"dataset": fmt.Sprintf("elastic.agent.%s", name),
 							},
 						},
 					},
@@ -263,6 +279,14 @@ func (o *Operator) getMonitoringMetricbeatConfig(output interface{}) (map[string
 							"type":      "metrics",
 							"name":      fmt.Sprintf("elastic.agent.%s", name),
 							"namespace": "default",
+						},
+					},
+				},
+				{
+					"add_fields": map[string]interface{}{
+						"target": "event",
+						"fields": map[string]interface{}{
+							"dataset": fmt.Sprintf("elastic.agent.%s", name),
 						},
 					},
 				},
